# trojanzoo

./: .buildinfo  .dockerfile  .flake8  .gitattributes  .gitignore  .gitmodules  .travis.yml  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  MANIFEST.in  README.md  activation_clustering.py  adv_attack.py  adv_defense.py  adv_train.py  advmind.py  attack.py  attack_backdoor.py  auc_results_collection.py  backdoor_attack.py  backdoor_defense.py  backdoor_unlearn.py  backdoor_validate.py  badnet.py  check_mitigated.py  confidence.py  defense_3d_data.json  domain_transfer.py  extract_acc.py  figure1_alpha.py  figure1_old_alpha.py  figure1_size.py  figure1_size_bar.py  figure3_sgm_alpha.py  figure3_sgm_size.py  figure3_size.py  figure_3d_defense_performance.py  figure_adaptive_magnet.py  figure_adaptive_nc.py  (+60 more)
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
_modules/: index.html
_sources/: index.rst.txt
alpsplot/: __init__.py
bash/: attack_alpha.sh  attack_class.sh  attack_for_defense_grouped.sh  attack_size.sh  attack_term.sh  attack_traverse.sh  badnet_alpha.sh  badnet_size.sh  clean_alpha.sh  clean_class.sh  clean_pgd_alpha.sh  clean_pgd_size.sh  clean_size.sh  defense.sh  defense_adv_train.sh  defense_alpha.sh  defense_benign.sh  defense_class.sh  defense_grouped.sh  defense_image_transform.sh  defense_size.sh  distributed_attack_alpha.sh  distributed_attack_size.sh  fine_pruning.sh  fine_tuning_alpha.sh  fine_tuning_size.sh  hidden_trigger_alpha.sh  hidden_trigger_size.sh  imc_alpha.sh  imc_latent_alpha.sh  imc_latent_size.sh  imc_size.sh  latent_alpha.sh  latent_size.sh  sgm_alpha.sh  sgm_size.sh  targeted_alpha.sh  targeted_class.sh  targeted_size.sh  transfer_alpha.sh  (+13 more)
config/: dataset.yml  env.yml  general.yml
config_cmd/: env.yml  general.yml
docker/: Dockerfile  base.dockerfile  cpu.dockerfile  gpu.dockerfile  sphinx.dockerfile
dockerfile/: python_cpu.dockerfile  tensorflow.dockerfile
docs/: .gitignore  Makefile  make.bat  requirements.txt
examples/: adv_attack.py  adv_defense.py  adv_validate.py  augment_search.py  augment_train.py  backdoor_attack.py  backdoor_defense.py  backdoor_validate.py  extraction_attack.py  figure_attack_asr_alpha.py  heatmap.py  membership_distance.py  pgd.py  plot.py  test.py  train.py  try.py  unlearn_attack.py  validate.py
plot/: figure.py
projects/: anova.py  anova_class.py  membership.py  membership_feats.py  membership_new_nni.py
script/: test.py  train.py
scripts/: pages.sh
tool/: calc.py  confidence.py
trojanplot/: __init__.py  colormap.py  figure.py
trojanvision/: __init__.py  configs.html  environ.html  environ.py  index.html  marks.html  optim.html  trainer.html  trainer.py  utils.html
trojanzoo/: __init__.py  attacks.html  attacks.py  configs.html  datasets.html  datasets.py  defenses.html  defenses.py  environ.html  environ.py  index.html  mark.py  models.html  models.py  optim.html  optim.py  requirements.txt  train.py  trainer.html  trainer.py  trojanzoo_version.py  utils.html  version.py
tutorials/: basic.html
(+919 files in other folders)
