[metadata]
name = trojanzoo
version = attr:trojanzoo.__version__
description = "a universal pytorch platform to conduct security researches"
long_description = file:README.md
long_description_content_type = text/markdown
url = "https://github.com/ain-soph/trojanzoo"
docs_url = "https://ain-soph.github.io/trojanzoo/"
author = Ren Pang
author_email = rbp5354@psu.edu
license = GPL-3
classifier =
  Intended Audience :: Developers
  Intended Audience :: Education
  Intended Audience :: Science/Research
  License :: OSI Approved :: GPL License
  Topic :: Scientific/Engineering
  Topic :: Scientific/Engineering :: Mathematics
  Topic :: Scientific/Engineering :: Artificial Intelligence
  Topic :: Software Development
  Topic :: Software Development :: Libraries
  Topic :: Software Development :: Libraries :: Python Modules
  Programming Language :: Python :: 3.9
keywords = 
  pytorch
  image classification
  backdoor attack/defense
platforms = any

[options]
zip_safe = False
# include_package_data = True
packages = find:
install_requires =
  torch>=1.7.1
  torchvision>=0.8.2
  matplotlib>=3.3.3
  seaborn>=0.11.1
  scikit-learn>=0.24.0
  pyyaml>=5.3.1
  pandas>=1.1.5
  tqdm>=4.54.1
python_requires = >=3.9.1

[options.package_data]
* = *.yml
trojanplot = font/*.ttf, font/__init__.py
trojanvision = data/*/*, marks/*.png
# *.rst, *.jpg, *.svg,  *.css, *.js, *.html, *.ninja, *.conf, *.woff, *.woff2, *.sh, Makefile, *.bat

[options.packages.find]
# include =
#   trojanzoo
#   trojanvision
#   trojanplot
exclude =
  lifelong
  trojanplot.font
