[metadata]
name = trojanzoo
version = attr:trojanzoo.version.__version__
description = a universal pytorch platform to conduct security researches
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/ain-soph/trojanzoo
docs_url = https://ain-soph.github.io/trojanzoo/
author = Ren Pang
author_email = rbp5354@psu.edu
license = GPL-3
classifier =
  Environment :: GPU :: NVIDIA CUDA :: 11.3
  Intended Audience :: Developers
  Intended Audience :: Education
  Intended Audience :: Science/Research
  License :: OSI Approved :: GNU General Public License v3 (GPLv3)
  Topic :: Scientific/Engineering :: Artificial Intelligence
  Topic :: Scientific/Engineering :: Image Recognition
  Topic :: Software Development :: Libraries :: Python Modules
  Programming Language :: Python :: 3.10
keywords = 
  pytorch
  image classification
  backdoor attack/defense

[options]
zip_safe = False
# include_package_data = True
packages = find:
install_requires =
  torch>=1.12.1
  torchvision>=0.13.1
  numpy>=1.22
  matplotlib>=3.4.2
  scikit-image>=0.19.2
  scikit-learn>=0.24.0
  scipy>=1.5.4
  pyyaml>=5.3.1
  pandas>=1.1.5
  tqdm>=4.54.1
python_requires = >=3.10

[options.package_data]
* = *.yml
trojanvision = data/*/*, marks/*.png

[options.packages.find]
# where = src
include = trojan*
exclude = 
  examples
  projects
  docs
  test